<resources>
    <string name="action_settings">Settings</string>

    <string name="no_intent_handler">There are no applications available to handle this action.</string>
    <string name="wrong_email_error_text">Incorrect Email</string>

    <string name="test_debug_some_text">Some text</string>

    <!--FONTS-->
    <string name="roboto_regular" translatable="false">fonts/roboto_regular.ttf</string>
    <string name="roboto_bold" translatable="false">fonts/roboto_bold.ttf</string>
    <string name="roboto_light" translatable="false">fonts/roboto_light.ttf</string>
    <string name="roboto_medium" translatable="false">fonts/roboto_medium.ttf</string>

    <!--Errors-->
    <string name="error_application_not_content_support">Приложение не поддерживает передаваемый контент</string>
    <string name="error_information_repeate_please">Произошла ошибка. Попробуйте снова</string>

    <!--Drawable Layout-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--Start screen-->
    <string name="start_screen_center_title">Ищи смешные картинки под разные ситуации и легко отправляй их в переписку</string>
    <string name="start_screen_authorization_error">Произошла ошибка авторизации. Перезапустите приложение</string>

    <!--Main screen-->
    <string name="main_screen_title">UMAD</string>
    <string name="sharing_screen_title">Sharing screen</string>

    <!-- Emotions-->
    <string name="emotions_item_view_new">Свежее</string>

    <!-- General-->
    <string name="general_on_boarding_header">Сохраняй лучшее</string>
    <string name="general_on_boarding_text">Лайкай картинки и гифы и они попадут в \"лучшее\"</string>
    <string name="general_like_message" formatted="false">Добавил в \"%s\"</string>
    <string name="general_today_better">Лучшее сегодня</string>
    <string name="general_tomorrow_will_be_more">Хочешь еще? Приходи завтра :)</string>

    <!-- Sharing View-->
    <string name="sharing_view_vk_title">ВКонтакте</string>
    <string name="sharing_view_vk_button">ВКОНТАКТЕ</string>
    <string name="sharing_view_send">SEND</string>
    <string name="sharing_view_header">Поделиться</string>
    <string name="sharing_view_hide">Скрыть</string>
    <string name="sharing_view_open_in_browser">Открыть в браузере</string>
    <string name="sharing_view_copy_link">Скопировать ссылку</string>
    <string name="sharing_view_copy_link_toast">Ссылка скопирована в буфер обмена</string>
    <string name="sharing_view_other">Поделиться</string>
    <string name="sharing_view_liked">В избранном</string>
    <string name="sharing_view_not_liked">В избранное</string>
    <string name="sharing_view_all_friends">Все друзья</string>
    <string name="sharing_view_toast_message">Подготавливаем картинку</string>
    <string name="sharing_view_vk_list_check">Ссылка на UMAD вместе с картинкой</string>
    <!-- Sharing service error message-->
    <string name="sharing_service_error_message">Произошла неизвестная ошибка. Попробуйте повторить действие позже.</string>


    <string name="main_feed_like_format_string">Картинка добавлена в коллекцию эмоции \"%s\"</string>
    <string name="main_feed_dislike_format_string">Картинка удалена из коллекции эмоции \"%s\"</string>
    <string name="hide_button_text">Hide</string>
    <string name="app_no_internet_text">Проверьте сетевое подключение и повторите попытку</string>
    <string name="general_feed_name">Новое</string>
    <string name="emotions_feed_name">Категории</string>
    <string name="correspond_feed_name">Переписки</string>
    <string name="favourite_feed_name">История</string>

    <!--Personal-->
    <string name="my_empty_text">Здесь хранятся все гифы и картинки, которые ты лайкал или отправлял друзьям. В хронологическом порядке</string>

    <!-- Gold-->
    <string name="gold_four_load_on_boarding_text">Классная папка? Жми сюда, и она переместится наверх.</string>
    <string name="gold_pin_on_boarding_text_promo">Папка сохранена вниз экрана.</string>
    <string name="gold_pin_on_boarding_text">Папка переместилась наверх.</string>
    <string name="gold_favorite_header_title">В этой папке каждую неделю меняется тема. Если эта тема тебе понравилась - сохрани.</string>
    <string name="gold_novel_header_text">50 случайных картинок\nОбновляются раз в день</string>
    <string name="gold_empty_text">В этом разделе пока нет картинок</string>
    <string name="gold_save_to_self">СОХРАНИТЬ ТЕБЕ</string>
    <string name="gold_up_to_top">Поднять наверх</string>

    <!--Category Filter-->
    <string name="category_filter_first_item_title">Все реакции</string>

    <!-- Instruction-->
    <string name="instruction_header">Теперь переписка с друзьями будет еще веселее</string>
    <string name="instruction_button_text">ПОЕХАЛИ!</string>

    <!--Settings-->
    <string name="settings_widget_title">Показывать виджет</string>
    <string name="settings_censorship_title">Не хочу видеть мат</string>
    <string name="settings_album_title">Создать альбом в телефоне</string>
    <string name="settings_feedback_title">Обратная связь</string>
    <string name="settings_estimate_title">Оценить приложение</string>
    <string name="settings_talk_friend_title">Рассказать другу про UMAD</string>
    <string name="settings_vk_group_title">Наш паблик</string>
    <string name="settings_terms_title">Terms of service</string>

    <!--Gold Screen-->
    <string name="gold_tab_favorite_title">ИЗБРАННЫЕ</string>
    <string name="gold_tab_novel_title">СЛУЧАЙНЫЕ</string>

    <!--Widget-->
    <string name="widget_title">@string/application_name</string>
    <string name="widget_context">Порадовать друзей классной картинкой</string>
    <string name="widget_all_pictures_action_title">Мемы для общения</string>

    <!--Feedback-->
    <string name="feedback_open_though">Открыть через</string>
    <string name="feedback_email">ozmcorp@gmail.com</string>

    <!-- onBoardingDialog-->
    <string name="on_boarding_dialog_header">Создавай альбомы!</string>
    <string name="on_boarding_dialog_text">Создать альбом в галерее на твоем телефоне?
    В нее будут попадать все картинки и гифки из избранного</string>
    <string name="on_boarding_dialog_cancel">Пропустить</string>
    <string name="on_boarding_dialog_ok">Создать</string>

    <!-- Send Friends-->
    <string name="send_friends_like_ozm">Нравится UMAD?</string>
    <string name="send_friends_talk_friend">расскажи про UMAD другу (пока Android only)</string>
    <string name="send_friends_share_button_text">Рассказать</string>
    <string name="send_friends_dismiss_button_text">В другой раз</string>

    <!-- Rating view-->
    <string name="rating_general_state_header">Вам нравится \"UMAD\"?</string>
    <string name="rating_general_state_green">нет</string>
    <string name="rating_general_state_orange">да</string>
    <string name="rating_good_state_header">Тогда поставьте нам оценку</string>
    <string name="rating_good_state_green">нет, спасибо</string>
    <string name="rating_good_state_orange">хорошо</string>
    <string name="rating_bad_state_header">Расскажите, что не так?</string>
    <string name="rating_bad_state_green">нет, спасибо</string>
    <string name="rating_bad_state_orange">хорошо</string>

</resources>
