<?xml version="1.0" encoding="utf-8"?>
<com.ozm.fun.ui.main.general.GeneralView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ozm.fun.ui.main.general.FilterView
        android:id="@+id/main_general_filter_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/category_filter_item_height"
        android:background="@color/filter_background_color"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/main_general_filter_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/category_filter_item_horizontal_padding"
            android:layout_weight="1"
            android:ellipsize="end"
            android:text="@string/category_filter_first_item_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/category_filter_item_text_size"
            app:customTypeface="regular"
            />

        <ImageView
            android:id="@+id/main_general_filter_image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/category_filter_item_horizontal_padding"
            android:src="@drawable/ic_arrow_down" />

    </com.ozm.fun.ui.main.general.FilterView>

    <com.ozm.fun.ui.misc.BetterViewAnimator
        android:id="@+id/main_general_better_view_amimator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/category_filter_item_height">

        <FrameLayout
            android:id="@+id/general_loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/main_general_image_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipe_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.github.ksoichiro.android.observablescrollview.ObservableListView
                    android:id="@+id/general_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:dividerHeight="@dimen/feed_list_divider_height"
                    android:overScrollMode="never"
                    android:padding="@dimen/feed_list_padding"
                    android:scrollbarStyle="outsideOverlay" />

            </android.support.v4.widget.SwipeRefreshLayout>


        </LinearLayout>

        <ListView
            android:id="@+id/main_general_filter_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/filter_background_color" />

    </com.ozm.fun.ui.misc.BetterViewAnimator>

    <FrameLayout
        android:id="@+id/general_on_boarding_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/general_on_boarding_bg"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <ImageView
            android:id="@+id/general_on_boarding_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_cross" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="28dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_on_boarding_header"
                android:textColor="@color/general_on_boarding_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customTypeface="medium"
                tools:ignore="MissingPrefix"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/general_on_boarding_text"
                android:textColor="@color/general_on_boarding_text"
                android:textSize="16sp"
                app:customTypeface="light"
                tools:ignore="MissingPrefix"
                />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/general_like_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/like_bg"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_like" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/general_loading_more_progress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/category_filter_item_height"
        android:background="#383838" />

</com.ozm.fun.ui.main.general.GeneralView>